Rewrite runMigrations task to fork Ant
* runMigrations can now execute with a different JVM.
* runMigrations now support MPS 2022.2 and above.